Mayor changes in code
Installation of necessary roles should be fully functional now.
README and variable files were edited and commented.
Templates were prepared and are fully functional now.
Some variables were placed to group-vars/all.yml and group-vars/passwords.yml files, so they can be seen from any role.
Optional roles for LDAP and Shibboleth are not done yet.